tool/src/java/snapshots/diplomat_tool__java__test__opaque_with_write_return.snap
---
source: tool/src/java/mod.rs
expression: gen_opaque_for_test(tk_stream)
---
package dev.diplomattest.somelib;

import java.lang.foreign.*;
import java.lang.invoke.MethodHandle;
import java.nio.charset.StandardCharsets;

public class MyString implements AutoCloseable {

    private static final Linker LINKER = Linker.nativeLinker();
    private static final SymbolLookup LIB;

    private static final MethodHandle DESTROY;
    private static final MethodHandle MYSTRING_GET_STR;
    private static final MethodHandle MYSTRING_STRING_TRANSFORM;

    static {
        System.loadLibrary("diplomat_example");
        LIB = SymbolLookup.loaderLookup();
        DESTROY = LINKER.downcallHandle(
            LIB.find("MyString_destroy").orElseThrow(),
            FunctionDescriptor.ofVoid(ValueLayout.ADDRESS)
        );
        MYSTRING_GET_STR = LINKER.downcallHandle(
            LIB.find("MyString_get_str").orElseThrow(),
            FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS)
        );
        MYSTRING_STRING_TRANSFORM = LINKER.downcallHandle(
            LIB.find("MyString_string_transform").orElseThrow(),
            FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS)
        );
    }

    final MemorySegment handle;

    MyString(MemorySegment handle) {
        this.handle = handle;
    }

    @Override
    public void close() {
        try {
            DESTROY.invokeExact(handle);
        } catch (Throwable ex) {
            throw new RuntimeException(ex);
        }
    }

    public static String stringTransform(String foo) {
        var write = DiplomatLib.createWrite();
        try (var arena = Arena.ofConfined()) {
            byte[] fooBytes = foo.getBytes(StandardCharsets.UTF_8);

            var fooSeg = arena.allocateFrom(ValueLayout.JAVA_BYTE, fooBytes);
            MYSTRING_STRING_TRANSFORM.invokeExact(fooSeg, (long) fooBytes.length, write);
            return DiplomatLib.writeToString(write);
        } catch (RuntimeException ex) {
            throw ex;
        } catch (Throwable ex) {
            throw new RuntimeException(ex);
        }
    }

    public String getStr() {
        var write = DiplomatLib.createWrite();
        try {
            MYSTRING_GET_STR.invokeExact(handle, write);
            return DiplomatLib.writeToString(write);
        } catch (RuntimeException ex) {
            throw ex;
        } catch (Throwable ex) {
            throw new RuntimeException(ex);
        }
    }
}
