tool/src/java/snapshots/diplomat_tool__java__test__simple_enum.snap
---
source: tool/src/java/mod.rs
expression: gen_all_for_test(tk_stream)
---
package dev.diplomattest.somelib;

import java.lang.foreign.*;
import java.lang.invoke.MethodHandle;
import java.nio.charset.StandardCharsets;

public enum Color {
    RED(0),
    GREEN(1),
    BLUE(2);

    private final int value;

    Color(int value) {
        this.value = value;
    }

    public int toNative() {
        return this.value;
    }

    public static Color fromNative(int value) {
        for (var variant : values()) {
            if (variant.value == value) {
                return variant;
            }
        }
        throw new IllegalArgumentException("Invalid native value for Color: " + value);
    }

    private static final Linker LINKER = Linker.nativeLinker();
    private static final SymbolLookup LIB;
    private static final MethodHandle COLOR_FLIP;

    static {
        System.loadLibrary("diplomat_example");
        LIB = SymbolLookup.loaderLookup();
        COLOR_FLIP = LINKER.downcallHandle(
            LIB.find("Color_flip").orElseThrow(),
            FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.JAVA_INT)
        );
    }

    public Color flip() {
        try {
            return Color.fromNative((int) COLOR_FLIP.invokeExact(this.toNative()));
        } catch (RuntimeException ex) {
            throw ex;
        } catch (Throwable ex) {
            throw new RuntimeException(ex);
        }
    }
}
