tool/src/java/snapshots/diplomat_tool__java__test__simple_struct.snap
---
source: tool/src/java/mod.rs
expression: gen_struct_for_test(tk_stream)
---
package dev.diplomattest.somelib;

import java.lang.foreign.*;
import java.lang.invoke.MethodHandle;
import java.lang.invoke.VarHandle;
import java.nio.charset.StandardCharsets;

public class MyStruct {

    static final StructLayout LAYOUT = MemoryLayout.structLayout(
        ValueLayout.JAVA_BYTE.withName("a"),
        ValueLayout.JAVA_BOOLEAN.withName("b"),
        MemoryLayout.paddingLayout(6),
        ValueLayout.JAVA_LONG.withName("c"),
        ValueLayout.JAVA_INT.withName("d"),
        MemoryLayout.paddingLayout(4)
    );
    private static final VarHandle VH_A = LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("a"));
    private static final VarHandle VH_B = LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("b"));
    private static final VarHandle VH_C = LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("c"));
    private static final VarHandle VH_D = LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("d"));

    private static final Linker LINKER = Linker.nativeLinker();
    private static final SymbolLookup LIB;
    private static final MethodHandle MYSTRUCT_NEW;
    private static final MethodHandle MYSTRUCT_INTO_A;

    static {
        System.loadLibrary("diplomat_example");
        LIB = SymbolLookup.loaderLookup();
        MYSTRUCT_NEW = LINKER.downcallHandle(
            LIB.find("MyStruct_new").orElseThrow(),
            FunctionDescriptor.of(MyStruct.LAYOUT, ValueLayout.JAVA_BYTE, ValueLayout.JAVA_BOOLEAN, ValueLayout.JAVA_LONG, ValueLayout.JAVA_INT)
        );
        MYSTRUCT_INTO_A = LINKER.downcallHandle(
            LIB.find("MyStruct_into_a").orElseThrow(),
            FunctionDescriptor.of(ValueLayout.JAVA_BYTE, MyStruct.LAYOUT)
        );
    }

    public byte a;

    public boolean b;

    public long c;

    public int d;

    public MyStruct() {
    }

    MyStruct(byte a, boolean b, long c, int d) {
        this.a = a;
        this.b = b;
        this.c = c;
        this.d = d;
    }

    static MyStruct fromNative(MemorySegment seg) {
        return new MyStruct(
            (byte) VH_A.get(seg, 0L),
            (boolean) VH_B.get(seg, 0L),
            (long) VH_C.get(seg, 0L),
            (int) VH_D.get(seg, 0L)
        );
    }

    MemorySegment toNative(Arena arena) {
        var seg = arena.allocate(LAYOUT);
        VH_A.set(seg, 0L, this.a);
        VH_B.set(seg, 0L, this.b);
        VH_C.set(seg, 0L, this.c);
        VH_D.set(seg, 0L, this.d);
        return seg;
    }

    public static MyStruct new_(byte a, boolean b, long c, int d) {
        try (var arena = Arena.ofConfined()) {
            return MyStruct.fromNative((MemorySegment) MYSTRUCT_NEW.invokeExact((SegmentAllocator) arena, a, b, c, d));
        } catch (RuntimeException ex) {
            throw ex;
        } catch (Throwable ex) {
            throw new RuntimeException(ex);
        }
    }

    public byte intoA() {
        try (var arena = Arena.ofConfined()) {
            return (byte) MYSTRUCT_INTO_A.invokeExact(this.toNative(arena));
        } catch (RuntimeException ex) {
            throw ex;
        } catch (Throwable ex) {
            throw new RuntimeException(ex);
        }
    }
}
