tool/src/java/snapshots/diplomat_tool__java__test__struct_param.snap
---
source: tool/src/java/mod.rs
expression: gen_all_for_test(tk_stream)
---
package dev.diplomattest.somelib;

import java.lang.foreign.*;
import java.lang.invoke.MethodHandle;
import java.lang.invoke.VarHandle;
import java.nio.charset.StandardCharsets;

public class Config {

    static final StructLayout LAYOUT = MemoryLayout.structLayout(
        ValueLayout.JAVA_INT.withName("width"),
        ValueLayout.JAVA_INT.withName("height")
    );
    private static final VarHandle VH_WIDTH = LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("width"));
    private static final VarHandle VH_HEIGHT = LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("height"));

    public int width;

    public int height;

    public Config() {
    }

    Config(int width, int height) {
        this.width = width;
        this.height = height;
    }

    static Config fromNative(MemorySegment seg) {
        return new Config(
            (int) VH_WIDTH.get(seg, 0L),
            (int) VH_HEIGHT.get(seg, 0L)
        );
    }

    MemorySegment toNative(Arena arena) {
        var seg = arena.allocate(LAYOUT);
        VH_WIDTH.set(seg, 0L, this.width);
        VH_HEIGHT.set(seg, 0L, this.height);
        return seg;
    }
}
package dev.diplomattest.somelib;

import java.lang.foreign.*;
import java.lang.invoke.MethodHandle;
import java.nio.charset.StandardCharsets;

public class Renderer implements AutoCloseable {

    private static final Linker LINKER = Linker.nativeLinker();
    private static final SymbolLookup LIB;

    private static final MethodHandle DESTROY;
    private static final MethodHandle RENDERER_NEW;

    static {
        System.loadLibrary("diplomat_example");
        LIB = SymbolLookup.loaderLookup();
        DESTROY = LINKER.downcallHandle(
            LIB.find("Renderer_destroy").orElseThrow(),
            FunctionDescriptor.ofVoid(ValueLayout.ADDRESS)
        );
        RENDERER_NEW = LINKER.downcallHandle(
            LIB.find("Renderer_new").orElseThrow(),
            FunctionDescriptor.of(ValueLayout.ADDRESS, Config.LAYOUT)
        );
    }

    final MemorySegment handle;

    Renderer(MemorySegment handle) {
        this.handle = handle;
    }

    @Override
    public void close() {
        try {
            DESTROY.invokeExact(handle);
        } catch (Throwable ex) {
            throw new RuntimeException(ex);
        }
    }

    public static Renderer new_(Config config) {
        try (var arena = Arena.ofConfined()) {
            return new Renderer((MemorySegment) RENDERER_NEW.invokeExact(config.toNative(arena)));
        } catch (RuntimeException ex) {
            throw ex;
        } catch (Throwable ex) {
            throw new RuntimeException(ex);
        }
    }
}
