tool/src/java/snapshots/diplomat_tool__java__test__trait_simple.snap
---
source: tool/src/java/mod.rs
expression: gen_all_with_traits_for_test(tk_stream)
---
package dev.diplomattest.somelib;

import java.lang.foreign.*;
import java.lang.invoke.MethodHandle;
import java.lang.invoke.VarHandle;
import java.nio.charset.StandardCharsets;

public class TraitTestingStruct {

    static final StructLayout LAYOUT = MemoryLayout.structLayout(
        ValueLayout.JAVA_INT.withName("x"),
        ValueLayout.JAVA_INT.withName("y")
    );
    private static final VarHandle VH_X = LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("x"));
    private static final VarHandle VH_Y = LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("y"));

    public int x;

    public int y;

    public TraitTestingStruct() {
    }

    TraitTestingStruct(int x, int y) {
        this.x = x;
        this.y = y;
    }

    static TraitTestingStruct fromNative(MemorySegment seg) {
        return new TraitTestingStruct(
            (int) VH_X.get(seg, 0L),
            (int) VH_Y.get(seg, 0L)
        );
    }

    MemorySegment toNative(Arena arena) {
        var seg = arena.allocate(LAYOUT);
        VH_X.set(seg, 0L, this.x);
        VH_Y.set(seg, 0L, this.y);
        return seg;
    }

    void updateFromNative(MemorySegment seg) {
        this.x = (int) VH_X.get(seg, 0L);
        this.y = (int) VH_Y.get(seg, 0L);
    }
}
package dev.diplomattest.somelib;

import java.lang.foreign.*;
import java.lang.invoke.MethodHandle;
import java.lang.invoke.VarHandle;
import java.nio.charset.StandardCharsets;

public class TraitWrapper {

    static final StructLayout LAYOUT = MemoryLayout.structLayout(
        ValueLayout.JAVA_BOOLEAN.withName("cantBeEmpty")
    );
    private static final VarHandle VH_CANT_BE_EMPTY = LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("cantBeEmpty"));
    private static final MethodHandle TRAITWRAPPER_TEST_WITH_TRAIT;
    private static final MethodHandle TRAITWRAPPER_TEST_TRAIT_WITH_STRUCT;

    static {
        TRAITWRAPPER_TEST_WITH_TRAIT = DiplomatLib.LINKER_SHARED.downcallHandle(
            DiplomatLib.LIB.find("TraitWrapper_test_with_trait").orElseThrow(),
            FunctionDescriptor.of(ValueLayout.JAVA_INT, TesterTrait.TRAIT_STRUCT_LAYOUT, ValueLayout.JAVA_INT)
        );
        TRAITWRAPPER_TEST_TRAIT_WITH_STRUCT = DiplomatLib.LINKER_SHARED.downcallHandle(
            DiplomatLib.LIB.find("TraitWrapper_test_trait_with_struct").orElseThrow(),
            FunctionDescriptor.of(ValueLayout.JAVA_INT, TesterTrait.TRAIT_STRUCT_LAYOUT)
        );
    }

    public boolean cantBeEmpty;

    public TraitWrapper() {
    }

    TraitWrapper(boolean cantBeEmpty) {
        this.cantBeEmpty = cantBeEmpty;
    }

    static TraitWrapper fromNative(MemorySegment seg) {
        return new TraitWrapper(
            (boolean) VH_CANT_BE_EMPTY.get(seg, 0L)
        );
    }

    MemorySegment toNative(Arena arena) {
        var seg = arena.allocate(LAYOUT);
        VH_CANT_BE_EMPTY.set(seg, 0L, this.cantBeEmpty);
        return seg;
    }

    void updateFromNative(MemorySegment seg) {
        this.cantBeEmpty = (boolean) VH_CANT_BE_EMPTY.get(seg, 0L);
    }

    public static int testWithTrait(TesterTrait t, int x) {
        try (var arena = Arena.ofConfined()) {
            var tNative = TesterTrait.createNative(t, arena);
            return (int) TRAITWRAPPER_TEST_WITH_TRAIT.invokeExact(tNative, x);
        } catch (RuntimeException ex) {
            throw ex;
        } catch (Throwable ex) {
            throw new RuntimeException(ex);
        }
    }

    public static int testTraitWithStruct(TesterTrait t) {
        try (var arena = Arena.ofConfined()) {
            var tNative = TesterTrait.createNative(t, arena);
            return (int) TRAITWRAPPER_TEST_TRAIT_WITH_STRUCT.invokeExact(tNative);
        } catch (RuntimeException ex) {
            throw ex;
        } catch (Throwable ex) {
            throw new RuntimeException(ex);
        }
    }
}
package dev.diplomattest.somelib;

import java.lang.foreign.*;
import java.lang.invoke.MethodHandle;
import java.lang.invoke.MethodHandles;
import java.lang.invoke.MethodType;
import java.lang.invoke.VarHandle;

public interface TesterTrait {
    int testTraitFn(int x);
    void testVoidTraitFn();
    int testStructTraitFn(TraitTestingStruct s);

    StructLayout VTABLE_LAYOUT = MemoryLayout.structLayout(
        ValueLayout.ADDRESS.withName("destructor"),
        ValueLayout.JAVA_LONG.withName("size"),
        ValueLayout.JAVA_LONG.withName("alignment"),
        ValueLayout.ADDRESS.withName("run_testTraitFn_callback"),
        ValueLayout.ADDRESS.withName("run_testVoidTraitFn_callback"),
        ValueLayout.ADDRESS.withName("run_testStructTraitFn_callback")
    );
    StructLayout TRAIT_STRUCT_LAYOUT = MemoryLayout.structLayout(
        ValueLayout.ADDRESS.withName("data"),
        VTABLE_LAYOUT.withName("vtable")
    );
    VarHandle VH_DATA = TRAIT_STRUCT_LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("data"));
    VarHandle VH_DESTRUCTOR = TRAIT_STRUCT_LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("vtable"), MemoryLayout.PathElement.groupElement("destructor"));
    VarHandle VH_SIZE = TRAIT_STRUCT_LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("vtable"), MemoryLayout.PathElement.groupElement("size"));
    VarHandle VH_ALIGNMENT = TRAIT_STRUCT_LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("vtable"), MemoryLayout.PathElement.groupElement("alignment"));
    VarHandle VH_RUN_TEST_TRAIT_FN = TRAIT_STRUCT_LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("vtable"), MemoryLayout.PathElement.groupElement("run_testTraitFn_callback"));
    VarHandle VH_RUN_TEST_VOID_TRAIT_FN = TRAIT_STRUCT_LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("vtable"), MemoryLayout.PathElement.groupElement("run_testVoidTraitFn_callback"));
    VarHandle VH_RUN_TEST_STRUCT_TRAIT_FN = TRAIT_STRUCT_LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("vtable"), MemoryLayout.PathElement.groupElement("run_testStructTraitFn_callback"));

    final class Statics {
        private Statics() {}
        private static int traitRunner_testTraitFn(MemorySegment data, int x) {
            TesterTrait impl_ = DiplomatLib.getCallback(data, TesterTrait.class);
            return impl_.testTraitFn(x);
        }
        private static void traitRunner_testVoidTraitFn(MemorySegment data) {
            TesterTrait impl_ = DiplomatLib.getCallback(data, TesterTrait.class);
            impl_.testVoidTraitFn();
        }
        private static int traitRunner_testStructTraitFn(MemorySegment data, MemorySegment s) {
            TesterTrait impl_ = DiplomatLib.getCallback(data, TesterTrait.class);
            return impl_.testStructTraitFn(TraitTestingStruct.fromNative(s));
        }
        static final MethodHandle MH_TEST_TRAIT_FN;
        static final MemorySegment UPCALL_testTraitFn;
        static {
            try {
                MH_TEST_TRAIT_FN = MethodHandles.lookup().findStatic(
                    Statics.class, "traitRunner_testTraitFn",
                    MethodType.methodType(int.class, MemorySegment.class, int.class));
                UPCALL_testTraitFn = DiplomatLib.LINKER_SHARED.upcallStub(
                    MH_TEST_TRAIT_FN,
                    FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.JAVA_INT),
                    Arena.global());
            } catch (ReflectiveOperationException ex) {
                throw new ExceptionInInitializerError(ex);
            }
        }
        static final MethodHandle MH_TEST_VOID_TRAIT_FN;
        static final MemorySegment UPCALL_testVoidTraitFn;
        static {
            try {
                MH_TEST_VOID_TRAIT_FN = MethodHandles.lookup().findStatic(
                    Statics.class, "traitRunner_testVoidTraitFn",
                    MethodType.methodType(void.class, MemorySegment.class));
                UPCALL_testVoidTraitFn = DiplomatLib.LINKER_SHARED.upcallStub(
                    MH_TEST_VOID_TRAIT_FN,
                    FunctionDescriptor.ofVoid(ValueLayout.ADDRESS),
                    Arena.global());
            } catch (ReflectiveOperationException ex) {
                throw new ExceptionInInitializerError(ex);
            }
        }
        static final MethodHandle MH_TEST_STRUCT_TRAIT_FN;
        static final MemorySegment UPCALL_testStructTraitFn;
        static {
            try {
                MH_TEST_STRUCT_TRAIT_FN = MethodHandles.lookup().findStatic(
                    Statics.class, "traitRunner_testStructTraitFn",
                    MethodType.methodType(int.class, MemorySegment.class, MemorySegment.class));
                UPCALL_testStructTraitFn = DiplomatLib.LINKER_SHARED.upcallStub(
                    MH_TEST_STRUCT_TRAIT_FN,
                    FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, TraitTestingStruct.LAYOUT),
                    Arena.global());
            } catch (ReflectiveOperationException ex) {
                throw new ExceptionInInitializerError(ex);
            }
        }
    }

    static MemorySegment createNative(Object impl_, Arena arena) {
        var id = DiplomatLib.registerCallback(impl_);
        var seg = arena.allocate(TRAIT_STRUCT_LAYOUT);
        VH_DATA.set(seg, 0L, id);
        VH_DESTRUCTOR.set(seg, 0L, DiplomatLib.DESTRUCTOR_STUB);
        VH_SIZE.set(seg, 0L, 0L);
        VH_ALIGNMENT.set(seg, 0L, 0L);
        VH_RUN_TEST_TRAIT_FN.set(seg, 0L, Statics.UPCALL_testTraitFn);
        VH_RUN_TEST_VOID_TRAIT_FN.set(seg, 0L, Statics.UPCALL_testVoidTraitFn);
        VH_RUN_TEST_STRUCT_TRAIT_FN.set(seg, 0L, Statics.UPCALL_testStructTraitFn);
        return seg;
    }
}
